Added elasticsearch to the ms_books_catalogue. Not tested